Adjust for github action and deploy for kubernetes

--- a/.github/workflows/bugsearchcrawler-service.yaml
+++ b/.github/workflows/bugsearchcrawler-service.yaml
@@ -1,4 +1,4 @@
-name: bugsearchcrawler-service
+name: bugsearchcore-service
 "on":
     push:
         branches:
@@ -9,11 +9,14 @@ env:
     AZURE_CONTAINER_REGISTRY: acrworkflow1684607545542
     CLUSTER_NAME: CrawlerBot
     CLUSTER_RESOURCE_GROUP: ifma-crawler
-    CONTAINER_NAME: bugsearchcrawler
+    CONTAINER_NAME: bugsearchcore
     DEPLOYMENT_MANIFEST_PATH: |
-        manifests/bugsearchcrawler-deployment.yaml
-        manifests/bugsearchcrawler-namespace.yaml
-        manifests/bugsearchcrawler-service.yaml
+        BugSearch.Crawler/Manifests/bugsearchcrawler-deployment.yaml
+        BugSearch.Crawler/Manifests/bugsearchcrawler-namespace.yaml
+        BugSearch.Crawler/Manifests/bugsearchcrawler-service.yaml
+        BugSearch.Api/Manifests/bugsearchapi-deployment.yaml
+        BugSearch.Api/Manifests/bugsearchapi-namespace.yaml
+        BugSearch.Api/Manifests/bugsearchapi-service.yaml
 jobs:
     buildImage:
         permissions:
