Add path in workflows

--- a/.github/workflows/bugsearchapi-service.yaml
+++ b/.github/workflows/bugsearchapi-service.yaml
@@ -1,6 +1,8 @@
 name: bugsearchapi-service
 "on":
     push:
+        paths:
+            - 'BugSearch.Api/**'
         branches:
             - master
     workflow_dispatch: {}
