--- a/.github/workflows/bugsearchcrawler-service.yaml
+++ b/.github/workflows/bugsearchcrawler-service.yaml
@@ -1,6 +1,8 @@
 name: bugsearchcrawler-service
 "on":
     push:
+        paths:
+            - 'BugSearch.Crawler/**'
         branches:
             - master
     workflow_dispatch: {}
