Adjust new path in action workflows

--- a/.github/workflows/bugsearchapi-service.yaml
+++ b/.github/workflows/bugsearchapi-service.yaml
@@ -3,6 +3,7 @@ name: bugsearchapi-service
     push:
         paths:
             - 'BugSearch.Api/**'
+            - 'BugSearch.Shared/**'
         branches:
             - master
     workflow_dispatch: {}
