--- a/BugSearch.Crawler/appsettings.json
+++ b/BugSearch.Crawler/appsettings.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
   "RabbitMQ": {
-    "HostName": "localhost",
+    "HostName": "rabbitmq-service.crawler-bot.svc.cluster.local",
     "Port": 5672,
-    "UserName": "guest",
-    "Password": "guest",
-    "Exchange": "dotnetspider"
+    "UserName": "user",
+    "Password": "password",
+    "Exchange": "BugSearch"
   },
   "ConnectionStrings": {
     "MongoDB": "mongodb://localhost:27017"
