--- a/BugSearch.Crawler/Manifests/RabbitMQ/rabbitmq-service.yaml
+++ b/BugSearch.Crawler/Manifests/RabbitMQ/rabbitmq-service.yaml
@@ -1,7 +1,6 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: crawler-bot
   name: rabbitmq-service
 spec:
   selector:
@@ -10,6 +9,8 @@ spec:
     - protocol: TCP
       port: 5672
       targetPort: 5672
+      name: amqp
     - protocol: TCP
       port: 15672
       targetPort: 15672
+      name: management
