Change hostname rabbitmq

--- a/BugSearch.Crawler/appsettings.json
+++ b/BugSearch.Crawler/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "RabbitMQ": {
-    "HostName": "rabbitmq-service.crawler-bot.svc.cluster.local",
+    "HostName": "20.253.64.167",
     "Port": 5672,
     "UserName": "user",
     "Password": "password",
