--- a/BugSearch.Crawler/Manifests/RabbitMQ/rabbitmq-service.yaml
+++ b/BugSearch.Crawler/Manifests/RabbitMQ/rabbitmq-service.yaml
@@ -1,8 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: crawler-bot
   name: rabbitmq-service
 spec:
+  type: LoadBalancer
   selector:
     app: rabbitmq
   ports:
