--- a/BugSearch.Crawler/appsettings.json
+++ b/BugSearch.Crawler/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "RabbitMQ": {
-    "HostName": "rabbitmq-service.crawler-bot.svc.cluster.local",
+    "HostName": "20.124.78.150",
     "Port": 5672,
-    "UserName": "user",
-    "Password": "password",
+    "UserName": "guest",
+    "Password": "guest",
     "Exchange": "BugSearch"
   },
   "ConnectionStrings": {
