Change appsettings to RabbitMQ

--- a/BugSearch.Crawler/appsettings.Development.json
+++ b/BugSearch.Crawler/appsettings.Development.json
@@ -7,13 +7,10 @@
   },
   "AllowedHosts": "*",
   "RabbitMQ": {
-    "HostName": "localhost",
+    "HostName": "20.124.78.150",
     "Port": 5672,
     "UserName": "guest",
     "Password": "guest",
-    "Exchange": "dotnetspider"
-  },
-  "ConnectionStrings": {
-    "MongoDB": "mongodb://localhost:27017"
+    "Exchange": "BugSearch"
   }
 }
