--- a/BugSearch.Api/appsettings.json
+++ b/BugSearch.Api/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OpenAPI_Key": "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"
 }
