Add Azure Key Vault

--- a/BugSearch.Api/appsettings.json
+++ b/BugSearch.Api/appsettings.json
@@ -5,6 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "OpenAPI_Key": "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"
+  "AllowedHosts": "*"
 }
