--- a/BugSearch.Shared/BugSearch.Shared.csproj
+++ b/BugSearch.Shared/BugSearch.Shared.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup> 
+    <PackageReference Include="Azure.Identity" Version="1.9.0" /> 
+    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" /> 
     <PackageReference Include="MongoDB.Driver" Version="2.19.2" />
   </ItemGroup>
 
