--- a/.github/workflows/bugsearchapi-service.yaml
+++ b/.github/workflows/bugsearchapi-service.yaml
@@ -10,7 +10,7 @@ name: bugsearchapi-service
 env:
     ACR_RESOURCE_GROUP: ifma-crawler
     AZURE_CONTAINER_REGISTRY: acrworkflow1684607545542
-    CLUSTER_NAME: CrawlerBot
+    CLUSTER_NAME: BugSearch
     CLUSTER_RESOURCE_GROUP: ifma-crawler
     CONTAINER_NAME: bugsearchapi
     DEPLOYMENT_MANIFEST_PATH: |
