--- a/.github/workflows/bugsearchshared-service.yaml
+++ b/.github/workflows/bugsearchshared-service.yaml
@@ -1,60 +1,64 @@
 name: bugsearchshared-service
-"on":
-    push:
-        paths:
-            - 'BugSearch.Shared/**'
-        branches:
-            - master
-    workflow_dispatch: {}
+on:
+  push:
+    paths:
+      - 'BugSearch.Shared/**'
+    branches:
+      - master
+  workflow_dispatch: {}
+
 env:
-    ACR_RESOURCE_GROUP: ifma-crawler
-    AZURE_CONTAINER_REGISTRY: acrworkflow1684607545542
-    CLUSTER_NAME: BugSearch
-    CLUSTER_RESOURCE_GROUP: ifma-crawler
-    DEPLOYMENT_MANIFEST_PATH: |
-        BugSearch.Shared/Manifests/RabbitMQ/rabbitmq-cluster.yaml
-        BugSearch.Shared/Manifests/RabbitMQ/rabbitmq-deployment.yaml
-        BugSearch.Shared/Manifests/RabbitMQ/rabbitmq-pvc.yaml
-        BugSearch.Shared/Manifests/RabbitMQ/rabbitmq-service.yaml
-        BugSearch.Shared/Manifests/MongoDB/mongodb-configmap.yaml
-        BugSearch.Shared/Manifests/MongoDB/mongodb-deployment.yaml
-        BugSearch.Shared/Manifests/MongoDB/mongodb-service.yaml
-        BugSearch.Shared/Manifests/MongoDB/mongodb-pv.yaml
-        BugSearch.Shared/Manifests/MongoDB/mongodb-pvc.yaml
-        BugSearch.Shared/Manifests/MongoDB/mongodb-secrets.yaml
-        BugSearch.Shared/Manifests/MongoExpress/mongoexpress-deployment.yaml
-        BugSearch.Shared/Manifests/MongoExpress/mongoexpress-service.yaml
+  ACR_RESOURCE_GROUP: ifma-crawler
+  AZURE_CONTAINER_REGISTRY: acrworkflow1684607545542
+  CLUSTER_NAME: BugSearch
+  CLUSTER_RESOURCE_GROUP: ifma-crawler
+  DEPLOYMENT_MANIFEST_PATH: |
+    BugSearch.Shared/Manifests/RabbitMQ/rabbitmq-cluster.yaml
+    BugSearch.Shared/Manifests/RabbitMQ/rabbitmq-deployment.yaml
+    BugSearch.Shared/Manifests/RabbitMQ/rabbitmq-pvc.yaml
+    BugSearch.Shared/Manifests/RabbitMQ/rabbitmq-service.yaml
+    BugSearch.Shared/Manifests/MongoDB/mongodb-configmap.yaml
+    BugSearch.Shared/Manifests/MongoDB/mongodb-deployment.yaml
+    BugSearch.Shared/Manifests/MongoDB/mongodb-service.yaml
+    BugSearch.Shared/Manifests/MongoDB/mongodb-pv.yaml
+    BugSearch.Shared/Manifests/MongoDB/mongodb-pvc.yaml
+    BugSearch.Shared/Manifests/MongoDB/mongodb-secrets.yaml
+    BugSearch.Shared/Manifests/MongoExpress/mongoexpress-deployment.yaml
+    BugSearch.Shared/Manifests/MongoExpress/mongoexpress-service.yaml
+
 jobs:
-    deploy:
-        permissions:
-            actions: read
-            contents: read
-            id-token: write
-        runs-on: ubuntu-latest
-        needs:
-            - buildImage
-        steps:
-            - uses: actions/checkout@v3
-            - uses: azure/login@v1.4.3
-              name: Azure login
-              with:
-                client-id: ${{ secrets.AZURE_CLIENT_ID }}
-                subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-                tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-            - uses: azure/use-kubelogin@v1
-              name: Set up kubelogin for non-interactive login
-              with:
-                kubelogin-version: v0.0.25
-            - uses: azure/aks-set-context@v3
-              name: Get K8s context
-              with:
-                admin: "false"
-                cluster-name: ${{ env.CLUSTER_NAME }}
-                resource-group: ${{ env.CLUSTER_RESOURCE_GROUP }}
-                use-kubelogin: "true"
-            - uses: Azure/k8s-deploy@v4
-              name: Deploys application (Crawler-Bot)
-              with:
-                action: deploy
-                manifests: ${{ env.DEPLOYMENT_MANIFEST_PATH }}
-                namespace: crawler-bot
+  buildImage:
+    runs-on: ubuntu-latest
+    steps:
+      # Adicione as etapas para construir a imagem do contêiner aqui
+      - name: Build container image
+        run: echo "Building container image..."
+
+  deploy:
+    needs: buildImage
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: azure/login@v1.4.3
+        name: Azure login
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+      - uses: azure/use-kubelogin@v1
+        name: Set up kubelogin for non-interactive login
+        with:
+          kubelogin-version: v0.0.25
+      - uses: azure/aks-set-context@v3
+        name: Get K8s context
+        with:
+          admin: "false"
+          cluster-name: ${{ env.CLUSTER_NAME }}
+          resource-group: ${{ env.CLUSTER_RESOURCE_GROUP }}
+          use-kubelogin: "true"
+      - uses: Azure/k8s-deploy@v4
+        name: Deploys application (Crawler-Bot)
+        with:
+          action: deploy
+          manifests: ${{ env.DEPLOYMENT_MANIFEST_PATH }}
+          namespace: crawler-bot
