Change ip address

--- a/BugSearch.Crawler/appsettings.json
+++ b/BugSearch.Crawler/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "RabbitMQ": {
-    "HostName": "20.124.78.150",
+    "HostName": "rabbitmq-bugsearch.eastus.cloudapp.azure.com",
     "Port": 5672,
     "UserName": "guest",
     "Password": "guest",
