Adjust values hardcoded

--- a/BugSearch.Crawler/appsettings.Development.json
+++ b/BugSearch.Crawler/appsettings.Development.json
@@ -5,12 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "RabbitMQ": {
-    "HostName": "20.124.78.150",
-    "Port": 5672,
-    "UserName": "guest",
-    "Password": "guest",
-    "Exchange": "BugSearch"
-  }
+  "AllowedHosts": "*"
 }
