--- a/BugSearch.Crawler/appsettings.json
+++ b/BugSearch.Crawler/appsettings.json
@@ -5,12 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "RabbitMQ": {
-    "HostName": "rabbitmq-bugsearch.eastus.cloudapp.azure.com",
-    "Port": 5672,
-    "UserName": "guest",
-    "Password": "guest",
-    "Exchange": "BugSearch"
-  }
+  "AllowedHosts": "*"
 }
