--- a/BugSearch.Shared/Manifests/OpenAI/openai-secrets.yaml
+++ b/BugSearch.Shared/Manifests/OpenAI/openai-secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 data:
-  apikey: empty
+  apikey: c2stekJJSUNxUjFWc2dDZ1NoUHFJNlFUM0JsYmtGSktQQ3ZWeEpWdGw1eE1PbEtuMTVN
 metadata:
   namespace: crawler-bot
   creationTimestamp: null
