--- a/BugSearch.Shared/Manifests/MongoDB/mongodb-configmap.yaml
+++ b/BugSearch.Shared/Manifests/MongoDB/mongodb-configmap.yaml
@@ -5,4 +5,6 @@ metadata:
   name: mongodb-configmap
 data:
   database_url: mongodb-service.crawler-bot.svc.cluster.local:27017
-  statsIsEnable: "true"
+  database: BugSearchDBV2
+  collection_event_crawler: eventcrawler
+  collection_dictionary: dictionary
