--- a/BugSearch.Shared/Manifests/RabbitMQ/rabbitmq-secrets.yaml
+++ b/BugSearch.Shared/Manifests/RabbitMQ/rabbitmq-secrets.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
-data:
-  username: YWRtaW51c2Vy
-  password: cGFzc3dvcmQxMjM=
 kind: Secret
+data:
+  username: Z3Vlc3Q=
+  password: Z3Vlc3Q=
 metadata:
   namespace: crawler-bot
   creationTimestamp: null
-  name: mongo-creds
+  name: rabbitmq-creds
