Adjust value int to string and add new configurations to cluster rabbitmq

--- a/BugSearch.Shared/Manifests/RabbitMQ/rabbitmq-configmap.yaml
+++ b/BugSearch.Shared/Manifests/RabbitMQ/rabbitmq-configmap.yaml
@@ -5,5 +5,5 @@ metadata:
   name: rabbitmq-configmap
 data:
   hostname: rabbitmq-bugsearch.eastus.cloudapp.azure.com
-  port: 5672
+  port: "5672"
   exchange: BugSearch
