--- a/BugSearch.Shared/Manifests/RabbitMQ/rabbitmq-cluster.yaml
+++ b/BugSearch.Shared/Manifests/RabbitMQ/rabbitmq-cluster.yaml
@@ -10,14 +10,22 @@ spec:
       cpu: 500m
       memory: 1Gi
     limits:
-      cpu: 3
+      cpu: 1
       memory: 2Gi
   rabbitmq:
           additionalConfig: |
                   log.console.level = info
                   channel_max = 1700
-                  default_user= guest
-                  default_pass = guest
+                  default_user= 
+                    valueFrom:
+                      secretKeyRef:
+                        name: rabbitmq-creds
+                        key: username
+                  default_pass = 
+                    valueFrom:
+                      secretKeyRef:
+                        name: rabbitmq-creds
+                        key: password
                   default_user_tags.administrator = true
   service:
     type: LoadBalancer
