--- a/BugSearch.Shared/Manifests/RabbitMQ/rabbitmq-cluster.yaml
+++ b/BugSearch.Shared/Manifests/RabbitMQ/rabbitmq-cluster.yaml
@@ -16,16 +16,8 @@ spec:
           additionalConfig: |
                   log.console.level = info
                   channel_max = 1700
-                  default_user= 
-                    valueFrom:
-                      secretKeyRef:
-                        name: rabbitmq-creds
-                        key: username
-                  default_pass = 
-                    valueFrom:
-                      secretKeyRef:
-                        name: rabbitmq-creds
-                        key: password
+                  default_user= guest 
+                  default_pass = guest
                   default_user_tags.administrator = true
   service:
     type: LoadBalancer
