--- a/BugSearch.Api/Manifests/bugsearchapi-deployment.yaml
+++ b/BugSearch.Api/Manifests/bugsearchapi-deployment.yaml
@@ -20,3 +20,39 @@ spec:
           image: acrworkflow1684607545542.azurecr.io/bugsearchapi:latest
           ports:
             - containerPort: 80
+        env:
+          - name: OPENAI_KEY
+            valueFrom:
+              secretKeyRef:
+                name: openai-creds
+                key: apikey
+          - name: MONGO_USERNAME
+            valueFrom:
+              secretKeyRef:
+                name: mongo-creds
+                key: username
+          - name: MONGO_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: mongo-creds
+                key: password
+          - name: MONGO_DATABASE_URL
+            valueFrom:
+              configMapKeyRef:
+                name: mongodb-configmap
+                key: database_url
+          - name: MONGO_DATABASE
+            valueFrom:
+              configMapKeyRef:
+                name: mongodb-configmap
+                key: database
+          - name: MONGO_COLLECTION_DICTIONARY
+            valueFrom:
+              configMapKeyRef:
+                name: mongodb-configmap
+                key: collection_dictionary
+          - name: MONGO_COLLECTION_EVENT_CRAWLER
+            valueFrom:
+              configMapKeyRef:
+                name: mongodb-configmap
+                key: collection_event_crawler
