--- a/BugSearch.Crawler/Manifests/bugsearchcrawler-deployment.yaml
+++ b/BugSearch.Crawler/Manifests/bugsearchcrawler-deployment.yaml
@@ -21,18 +21,58 @@ spec:
           ports:
             - containerPort: 80
           env:
-            - name: MONGODB_USERNAME
+            - name: MONGO_USERNAME
               valueFrom:
                 secretKeyRef:
                   name: mongo-creds
                   key: username
-            - name: MONGODB_PASSWORD
+            - name: MONGO_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: mongo-creds
                   key: password
-            - name: DB_CONN_STRING
+            - name: MONGO_DATABASE_URL
               valueFrom: 
                 configMapKeyRef:
                   name: mongodb-configmap
                   key: database_url
+            - name: MONGO_DATABASE
+              valueFrom:
+                configMapKeyRef:
+                  name: mongodb-configmap
+                  key: database
+            - name: MONGO_COLLECTION_DICTIONARY
+              valueFrom:
+                configMapKeyRef:
+                  name: mongodb-configmap
+                  key: collection_dictionary
+            - name: MONGO_COLLECTION_EVENT_CRAWLER
+              valueFrom:
+                configMapKeyRef:
+                  name: mongodb-configmap
+                  key: collection_event_crawler
+            - name: RABBITMQ_HOSTNAME
+              valueFrom: 
+                configMapKeyRef:
+                  name: rabbitmq-configmap
+                  key: hostname
+            - name: RABBITMQ_PORT
+              valueFrom: 
+                configMapKeyRef:
+                  name: rabbitmq-configmap
+                  key: port
+            - name: RABBITMQ_EXCHANGE
+              valueFrom: 
+                configMapKeyRef:
+                  name: rabbitmq-configmap
+                  key: exchange
+            - name: RABBITMQ_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: rabbitmq-creds
+                  key: username
+            - name: RABBITMQ_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: rabbitmq-creds
+                  key: password
