Adding reference .env in Dockerfile

--- a/BugSearch.Api/Dockerfile
+++ b/BugSearch.Api/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /app
 
 # Copy the project files
 COPY . .
+COPY .env .
 
 # Build the project
 RUN dotnet publish -c Release -o out
@@ -18,6 +19,7 @@ WORKDIR /app
 
 # Copy the published output from the build stage
 COPY --from=build /app/out .
+COPY --from=build /app/.env .
 
 # Expose the port
 EXPOSE 80
