--- a/BugSearch.Api/Dockerfile
+++ b/BugSearch.Api/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 
 # Copy the project files
 COPY . .
-COPY .env .
+COPY ./.env .
 
 # Build the project
 RUN dotnet publish -c Release -o out
