Add task manager in Crawler bot

--- a/BugSearch.Crawler/local.settings.json
+++ b/BugSearch.Crawler/local.settings.json
@@ -1,16 +1,16 @@
 {
   "IsEncrypted": false,
   "Values": {
-    "RABBITMQ_HOSTNAME": "<RABBITMQ_HOSTNAME>",
-    "RABBITMQ_PORT": "<RABBITMQ_PORT>",
-    "RABBITMQ_EXCHANGE": "<RABBITMQ_EXCHANGE>",
-    "RABBITMQ_USERNAME": "<RABBITMQ_USERNAME>",
-    "RABBITMQ_PASSWORD": "<RABBITMQ_PASSWORD>",
+    "RABBITMQ_HOSTNAME": "localhost",
+    "RABBITMQ_PORT": 5672,
+    "RABBITMQ_EXCHANGE": "BugSearch",
+    "RABBITMQ_USERNAME": "guest",
+    "RABBITMQ_PASSWORD": "guest",
     "MONGO_USERNAME": "<MONGO_USERNAME>",
     "MONGO_PASSWORD": "<MONGO_PASSWORD>",
-    "MONGO_DATABASE_URL": "<MONGO_DATABASE_URL>",
-    "MONGO_DATABASE": "<MONGO_DATABASE>",
-    "MONGO_COLLECTION_DICTIONARY": "<MONGO_COLLECTION_DICTIONARY>",
-    "MONGO_COLLECTION_EVENT_CRAWLER": "<MONGO_COLLECTION_EVENT_CRAWLER>"
+    "MONGO_DATABASE_URL": "localhost:27017",
+    "MONGO_DATABASE": "BugSearchDBV2",
+    "MONGO_COLLECTION_DICTIONARY": "eventcrawler",
+    "MONGO_COLLECTION_EVENT_CRAWLER": "dictionary"
   }
 }
