Fix bug with persistence data

--- a/BugSearch.Api/local.settings.json
+++ b/BugSearch.Api/local.settings.json
@@ -2,11 +2,11 @@
   "IsEncrypted": false,
   "Values": {
     "OPENAI_KEY": "<OPENAI_KEY>",
-    "MONGO_USERNAME": "<MONGO_USERNAME>",
-    "MONGO_PASSWORD": "<MONGO_PASSWORD>",
-    "MONGO_DATABASE_URL": "<MONGO_DATABASE_URL>",
-    "MONGO_DATABASE": "<MONGO_DATABASE>",
-    "MONGO_COLLECTION_DICTIONARY": "<MONGO_COLLECTION_DICTIONARY>",
-    "MONGO_COLLECTION_EVENT_CRAWLER": "<MONGO_COLLECTION_EVENT_CRAWLER>"
+    "MONGO_USERNAME": "admin",
+    "MONGO_PASSWORD": "senha_admin",
+    "MONGO_DATABASE_URL": "localhost:27017",
+    "MONGO_DATABASE": "BugSearchDBV2",
+    "MONGO_COLLECTION_DICTIONARY": "dictionary",
+    "MONGO_COLLECTION_EVENT_CRAWLER": "eventcrawler"
   }
 }
