--- a/BugSearch.Shared/BugSearch.Shared.csproj
+++ b/BugSearch.Shared/BugSearch.Shared.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.19.2" />
   </ItemGroup>
 
+  <ItemGroup Condition=" '$(Configuration)' == 'Debug' ">
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
