--- a/BugSearch.Crawler/Manifests/bugsearchcrawler-deployment.yaml
+++ b/BugSearch.Crawler/Manifests/bugsearchcrawler-deployment.yaml
@@ -6,7 +6,14 @@ metadata:
     app: bugsearchcrawler-service
   namespace: crawler-bot
 spec:
-  replicas: 1
+  replicas: 3
+  resources:
+    requests:
+      cpu: 500m
+      memory: 1Gi
+    limits:
+      cpu: 3
+      memory: 2Gi
   selector:
     matchLabels:
       app: bugsearchcrawler-service
