--- a/BugSearch.Crawler/Manifests/bugsearchcrawler-deployment.yaml
+++ b/BugSearch.Crawler/Manifests/bugsearchcrawler-deployment.yaml
@@ -20,6 +20,13 @@ spec:
           image: acrworkflow1684607545542.azurecr.io/bugsearchcrawler:latest
           ports:
             - containerPort: 80
+          resources:
+          requests:
+            cpu: 500m
+            memory: 1Gi
+          limits:
+            cpu: 3
+            memory: 2Gi
           env:
             - name: MONGO_USERNAME
               valueFrom:
