Adjut async process mongo

--- a/.github/workflows/bugsearchshared-service.yaml
+++ b/.github/workflows/bugsearchshared-service.yaml
@@ -2,8 +2,7 @@ name: bugsearchshared-service
 "on":
     push:
         paths:
-            - 'BugSearch.Crawler/**'
-            - 'BugSearch.Shared/**'
+            - 'BugSearch.Shared/Manifests/**'
         branches:
             - master
     workflow_dispatch: {}
