--- a/.github/workflows/bugsearchapi-service.yaml
+++ b/.github/workflows/bugsearchapi-service.yaml
@@ -3,6 +3,10 @@ name: bugsearchapi-service
     push:
         paths:
             - 'BugSearch.Api/**'
+            - 'BugSearch.Shared/Services/**'
+            - 'BugSearch.Shared/Singletons/**'
+            - 'BugSearch.Shared/Interfaces/**'
+            - 'BugSearch.Shared/Enums/**'
         branches:
             - master
     workflow_dispatch: {}
