--- a/BugSearch.Api/Manifests/bugsearchapi-deployment.yaml
+++ b/BugSearch.Api/Manifests/bugsearchapi-deployment.yaml
@@ -56,3 +56,8 @@ spec:
                 configMapKeyRef:
                   name: mongodb-configmap
                   key: collection_event_crawler
+            - name: SEQ_URL
+              valueFrom: 
+                configMapKeyRef:
+                  name: seq-configmap
+                  key: log_url
