--- a/BugSearch.Api/BugSearch.Api.csproj
+++ b/BugSearch.Api/BugSearch.Api.csproj
@@ -20,6 +20,11 @@
     <PackageReference Include="Serilog.Sinks.PeriodicBatching" Version="3.1.0" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\BugSearch.Shared\\BugSearch.Shared.csproj" />
   </ItemGroup>
