Adding new features in search api

--- a/BugSearch.Crawler/appsettings.Development.json
+++ b/BugSearch.Crawler/appsettings.Development.json
@@ -5,5 +5,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMQ": {
+    "Hostname": "localhost",
+    "Port": 5672,
+    "Exchange": "BugSearch",
+    "Username": "guest",
+    "Password": "guest"
+  },
+  "Mongo": {
+    "Username": "admin",
+    "Password": "senha_admin",
+    "DatabaseUrl": "localhost:27017",
+    "Database": "BugSearchDBV2",
+    "Collections": {
+      "Dictionary": "dictionary",
+      "EventCrawler": "eventcrawler"
+    }
+  }
 }
