--- a/src/BugSearch.Api/BugSearch.Api.csproj
+++ b/src/BugSearch.Api/BugSearch.Api.csproj
@@ -28,7 +28,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BugSearch.Shared\\BugSearch.Shared.csproj" />
+    <ProjectReference Include="../BugSearch.Shared/BugSearch.Shared.csproj" />
   </ItemGroup>
 
 </Project>
